# param-tool-box

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  cmake_linux.yml  cmake_macos.yml  cmake_windows.yml
include/ha/param-tool-box/: rampprocessor.h
include/ha/param-tool-box/convert/: dezibel.h
include/ha/param-tool-box/process/: rampprocessor.h
include/ha/param_tool_box/convert/: db_scale.h  dezibel.h  exponential.h  lin_scale.h  linear.h  log_scale.h  logarithmic.h  percent.h  string_list.h
include/ha/param_tool_box/convert/detail/: db_scale.h  lin_scale.h  log_scale.h
include/ha/param_tool_box/core/: clamp.h  to_string.h  types.h
include/ha/param_tool_box/process/: ramp.h  ramp_processor.h
include/ha/ptb/: paramramp.h  paramrampprocessor.h  paramvaluequeueprocessor.h
source/: paramramp.cpp  paramrampprocessor.cpp  paramvaluequeueprocessor.cpp  ramp.cpp  ramp_processor.cpp  rampprocessor.cpp
test/: convert_dezibel_test.cpp  convert_exponential_test.cpp  convert_linear_test.cpp  convert_logarithmic_test.cpp  convert_string_list_test.cpp  convert_test.cpp  log_scale_test.cpp  paramrampprocessor_test.cpp  paramvaluequeueprocessor_test.cpp  ramp_processor_test.cpp  rampprocessor_test.cpp
